--- a/FIFAManager.cbp
+++ b/FIFAManager.cbp
@@ -51,6 +51,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="menu.h" />
+		<Unit filename="sort.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="sort.h" />
 		<Unit filename="tools.c">
 			<Option compilerVar="CC" />
 		</Unit>
